Bug 394388 - Doesn't update installed status when installing/removing packages
Summary: Doesn't update installed status when installing/removing packages
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: PackageKit (other bugs)
Version First Reported In: 5.12.5
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-05-17 18:12 UTC by Elia Devito
Modified: 2018-05-18 14:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elia Devito 2018-05-17 18:12:55 UTC
To reproduce

1. Launch Discover
2. Install some app

Actual results:
Installation work fine but the app remains visible with a 'Install' button. Clicking on it show "Package is already installed" message

Identical behaviour on package remove (app remains visible with a 'Remove' button.

after discover restart the button shows correctly status

Expected results:
app result installed/removed immediately after install/remove process



Fedora bug: https://bugzilla.redhat.com/show_bug.cgi?id=1508735
Comment 1 Rex Dieter 2018-05-17 19:21:50 UTC
I can confirm this.

What *does* work as expected, interestingly, if you click on the app to get it's full description... then install/remove there.
Comment 2 Aleix Pol 2018-05-18 14:27:11 UTC
Git commit 82f69cffc8ff52fb567de70b81e4f3a06f865525 by Aleix Pol.
Committed on 18/05/2018 at 14:25.
Pushed by apol into branch 'Plasma/5.12'.

Resolve all packages that have been modified by the transaction

PackageKit dnf backend doesn't resolve the different packages in the
transaction as finished so they were not detected as changed.

M  +6    -4    libdiscover/backends/PackageKitBackend/PKTransaction.cpp

https://commits.kde.org/discover/82f69cffc8ff52fb567de70b81e4f3a06f865525