Resolve all packages that have been modified by the transaction

PackageKit dnf backend doesn't resolve the different packages in the
transaction as finished so they were not detected as changed.

BUG: 394388